tests/ui/string_not_indexable.rs
use metamatch::unquote;

fn main() {
    unquote! {
        "asdf"[2]
    }
}
